tests/golden/compile-pass/trait_impl_method.rua
trait Named {
    fn name(&self) -> String;
}

struct Item {}

impl Named for Item {
    fn name(&self) -> String {
        "item"
    }
}

fn read(item: Item) -> String {
    item.name()
}
