tests/golden/compile-fail/trait_bound_method_wrong_arity.rua
trait Animal {
    fn speak(&self) -> String;
}

fn describe<T: Animal>(animal: T) -> String {
    animal.speak(1)
}
